[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["kias"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
